--- a/README.Rmd
+++ b/README.Rmd
@@ -29,6 +29,7 @@ dbSendQuery(db, "SELECT * FROM continent WHERE FID < 1")
 
 dbSendQuery(db, "SELECT * FROM continent WHERE continent LIKE '%ca'")
 
+dbReadTable(db, "continent")
 ```
 
 Geometry currently is just in JSON form. See hypertidy/vapour for the tooling. 
