--- a/README.Rmd
+++ b/README.Rmd
@@ -36,3 +36,11 @@ substr(head(res$GEOM), 1, 200)
 
 Geometry currently is just in JSON form. See hypertidy/vapour for the tooling. 
 
+
+Select doesnt' work yet, but filter does
+
+```{r}
+library(dplyr)
+tbl(db, "continent") %>% dplyr::filter(continent == "Australia")
+```
+
