--- a/README.Rmd
+++ b/README.Rmd
@@ -37,10 +37,33 @@ substr(head(res$GEOM), 1, 200)
 Geometry currently is just in JSON form. See hypertidy/vapour for the tooling. 
 
 
-Select doesnt' work yet, but filter does
+Lazy does not work yet ...
 
-```{r}
+
+```{r, eval = FALSE}
 library(dplyr)
 tbl(db, "continent") %>% dplyr::filter(continent == "Australia")
+
+library(sf)
+to_sf <- function(x, ...) {
+  x[["GEOM"]] <- sf::st_as_sfc(x[["GEOM"]], GeoJSON = TRUE)
+  sf::st_as_sf(x)
+}
+tbl(db, "continent") %>% dplyr::filter(continent %in% c("Australia", "Antarctica")) %>% collect() %>% 
+  to_sf()
+```
+
+Try OSM PBF. 
+
+```{r, eval = FALSE}
+f <- "~/albania-latest.osm.pbf"
+pbf <- dbConnect(RGDALSQL::GDALSQL(),f)
+## we have to use a normalized path 
+## (vapour doesn't do this yet, but GDALSQL will do it *when connecting*, 
+## currently maintains the input DSN)
+pbf
+# db_list_tables(pbf)
+
+tbl(pbf, "points") 
 ```
 
