--- a/README.Rmd
+++ b/README.Rmd
@@ -1,5 +1,7 @@
 ---
 output: github_document
+editor_options: 
+  chunk_output_type: console
 ---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
@@ -29,33 +31,23 @@ dbSendQuery(db, "SELECT * FROM continent WHERE FID < 1")
 
 dbSendQuery(db, "SELECT * FROM continent WHERE continent LIKE '%ca'")
 
-res <- dbReadTable(db, "continent")
-print(res)
-substr(head(res$GEOM), 1, 200)
+(res <- dbReadTable(db, "continent"))
 ```
 
-Geometry currently is just in JSON form. See hypertidy/vapour for the tooling. 
-
-
-Lazy does not work yet ...
 
 
 ```{r}
 library(dplyr)
 tbl(db, "continent") %>% dplyr::filter(continent == "Australia")
 
-library(sf)
-to_sf <- function(x, ...) {
-  x[["GEOM"]] <- sf::st_as_sfc(x[["GEOM"]], GeoJSON = TRUE)
-  sf::st_as_sf(x)
-}
-tbl(db, "continent") %>% dplyr::filter(continent %in% c("Australia", "Antarctica")) %>% collect() %>% 
-  to_sf()
+
+tbl(db, "continent") %>% dplyr::filter(continent %in% c("Australia", "Antarctica")) %>% collect() 
 ```
 
 Try OSM PBF. 
 
-```{r}
+```{r, eval=FALSE}
+# wget https://download.geofabrik.de/europe/albania-latest.osm.pbf
 f <- "~/albania-latest.osm.pbf"
 pbf <- dbConnect(RGDALSQL::GDALSQL(),f)
 ## we have to use a normalized path 
@@ -65,6 +57,21 @@ pbf
 # db_list_tables(pbf)
 
 tbl(pbf, "points") 
+# Source:   table<points> [?? x 11]
+# Database: GDALSQLConnection
+   osm_id  name      barrier highway   ref   address is_in place man_made other_tags                            GEOM      
+   <chr>   <chr>     <chr>   <chr>     <chr> <chr>   <chr> <chr> <chr>    <chr>                                 <wk_wkb>  
+ 1 154606… ""        ""      "traffic… ""    ""      ""    ""    ""       "\"crossing\"=>\"traffic_signals\",\… <POINT (1…
+ 2 154926… ""        ""      "crossin… ""    ""      ""    ""    ""       "\"crossing\"=>\"uncontrolled\""      <POINT (1…
+ 3 154927… ""        ""      "traffic… ""    ""      ""    ""    ""       "\"crossing\"=>\"traffic_signals\",\… <POINT (1…
+ 4 154927… ""        ""      "crossin… ""    ""      ""    ""    ""       "\"crossing\"=>\"uncontrolled\""      <POINT (1…
+ 5 154928… ""        ""      "traffic… ""    ""      ""    ""    ""       "\"crossing\"=>\"traffic_signals\",\… <POINT (1…
+ 6 154936… ""        ""      "crossin… ""    ""      ""    ""    ""       "\"crossing\"=>\"uncontrolled\",\"su… <POINT (1…
+ 7 268630… "Grykat … ""      ""        ""    ""      ""    ""    ""       "\"natural\"=>\"peak\""               <POINT (1…
+ 8 268632… "Kakiuki" ""      ""        ""    ""      ""    ""    ""       "\"natural\"=>\"peak\""               <POINT (1…
+ 9 268635… "Mali i … ""      ""        ""    ""      ""    ""    ""       "\"natural\"=>\"peak\",\"wikidata\"=… <POINT (1…
+10 268635… "Maja e … ""      ""        ""    ""      ""    ""    ""       "\"natural\"=>\"peak\",\"prominence\… <POINT (2…
+# … with more rows
 ```
 
 
@@ -74,5 +81,5 @@ conn <- dbConnect(RGDALSQL::GDALSQL(),f)
 conn
 dbListTables(conn)
 
-x <- dbSendQuery(conn, "SELECT AREA FROM sids WHERE SID74 < 10")
+x <- dbSendQuery(conn, "SELECT * FROM sids WHERE SID74 < 10")
 ```
